// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have blank in list 1`] = `
<div>
  <div
    class="container"
  >
    <h2>
      輸入生成列表
    </h2>
    <form
      class="input-group mb-3"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
          id="basic-addon1"
        >
          todo
        </span>
      </div>
      <input
        class="form-control"
        data-testid="input"
      />
    </form>
    <ul
      class="list-group"
    >
      <li
        class="list-group-item"
      />
      <li
        class="list-group-item"
      >
        qwerty
      </li>
    </ul>
  </div>
</div>
`;

exports[`should have lists 1`] = `
<div>
  <div
    class="container"
  >
    <h2>
      輸入生成列表
    </h2>
    <form
      class="input-group mb-3"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
          id="basic-addon1"
        >
          todo
        </span>
      </div>
      <input
        class="form-control"
        data-testid="input"
      />
    </form>
    <ul
      class="list-group"
    >
      <li
        class="list-group-item"
      >
        zxcvbn
      </li>
      <li
        class="list-group-item"
      >
        qwerty
      </li>
    </ul>
  </div>
</div>
`;
